<resources>
  <string name="confirm_button_text" translatable="false">OK</string>
  <string name="dont_have_account_yet">Don\'t have an account in Supla Cloud yet?</string>
  <string name="app_name" translatable="false">SUPLA</string>
  <string name="app_name_lowercased" translatable="false">supla</string>
  <string name="profiles_title">Accounts</string>
  <string name="profile_name_label">ACCOUNT NAME</string>
  <string name="profile_default_name">Default account</string>
  <string name="profile_select_active">Select active account</string>
  <string name="profile_act_info">Tap the account to log in.</string>
  <string name="form_error">Error</string>
  <string name="form_profile_name_missing">Account name is missing</string>
  <string name="form_profile_required_data_missing">Required data is missing</string>
  <string name="form_profile_duplicate">Account by that name already exists</string>
  <string name="add_account">Add an account</string>
  <string name="edit_account">Edit account</string>
  <string name="supla_cloud" translatable="false">Supla Cloud</string>
  <string name="menubar_title" translatable="false">supla</string>
  <string name="homepage" translatable="false">www.supla.org</string>
  <string name="homepage_url" translatable="false">https://www.supla.org</string>
  <string name="forumpage_url" translatable="false">https://en-forum.supla.org</string>
  <string name="cloud_url" translatable="false">https://cloud.supla.org</string>
  <string name="beta_cloud_url" translatable="false">https://beta-cloud.supla.org</string>
  <string name="create_url">https://cloud.supla.org/register?lang=en</string>
  <string name="delete_url">https://{SERVER_ADDRESS}/db99845855b2ecbfecca9a095062b96c3e27703f?lang=en</string>
  <string name="devices_list_url" translatable="false">https://supla.org/en/devices</string>
  <string name="version">version</string>
  <string name="about">About</string>
  <string name="settings">Settings</string>
  <string name="add_device">Add I/O device</string>
  <string name="z_wave">Z-Wave bridge</string>
  <string name="help">Help</string>
  <string name="menu_notifications">Notifications log</string>
  <string name="channel_state_uptime">%1$d days %2$02d:%3$02d:%4$02d</string>
  <string name="status_connecting">Connecting…</string>
  <string name="status_unknown_err">Unknown error</string>
  <string name="status_temporarily_unavailable">Service temporarily unavailable</string>
  <string name="status_bad_credentials">Bad credentials</string>
  <string name="status_climit_exceded">Client limit exceeded</string>
  <string name="status_reg_disabled">New client registration disabled. Please log in to \"Supla Cloud\" and enable “New client registration” in “Smartphone” section of the website.</string>
  <string name="status_access_id_not_assigned">Client activation required. Please log in to \"Supla Cloud\" and assign an “Access ID” for this device in “Smartphone” section of the website.</string>
  <string name="status_device_disabled">Device disabled. Please log in to \"Supla Cloud\" and enable this device in “Smartphone” section of the website.</string>
  <string name="status_accessid_disabled">Access Identifier is disabled</string>
  <string name="err_hostnotfound">Host not found. Make sure you are connected to the internet and that an account with the entered email address has been created.</string>
  <string name="err_cantconnecttohost">Can\'t connect to host</string>
  <string name="channel_caption_gateway">Gateway</string>
  <string name="channel_caption_gate">Gate</string>
  <string name="channel_caption_garagedoor">Garage door</string>
  <string name="channel_caption_door">Door</string>
  <string name="channel_caption_rollershutter">Roller shutter</string>
  <string name="channel_caption_powerswith">Power switch</string>
  <string name="channel_caption_lightswith">Lighting switch</string>
  <string name="channel_caption_thermometer">Thermometer</string>
  <string name="channel_caption_humidity">Humidity</string>
  <string name="channel_caption_humidityandtemperature">Temperature and Humidity</string>
  <string name="channel_caption_windsensor">Wind sensor</string>
  <string name="channel_caption_pressuresensor">Pressure sensor</string>
  <string name="channel_caption_rainsensor">Rain sensor</string>
  <string name="channel_caption_weightsensor">Weight sensor</string>
  <string name="channel_caption_dimmer">Dimmer</string>
  <string name="channel_caption_rgblighting">RGB Lighting</string>
  <string name="channel_caption_dimmerandrgblighting">Dimmer and RGB lighting</string>
  <string name="channel_caption_noliquidsensor">No liquid sensor</string>
  <string name="channel_caption_gatewayopeningsensor">Gateway opening sensor</string>
  <string name="channel_caption_gateopeningsensor">Gate opening sensor</string>
  <string name="channel_caption_garagedooropeningsensor">Garage door opening sensor</string>
  <string name="channel_caption_dooropeningsensor">Door opening sensor</string>
  <string name="channel_caption_rsopeningsensor">Roller shutter opening sensor</string>
  <string name="channel_caption_depthsensor">Depth sensor</string>
  <string name="channel_caption_distancesensor">Distance sensor</string>
  <string name="channel_caption_windowopeningsensor">Window opening sensor</string>
  <string name="channel_caption_mailsensor">Mail sensor</string>
  <string name="channel_caption_staircasetimer">Staircase timer</string>
  <string name="channel_caption_electricitymeter">Electricity Meter</string>
  <string name="channel_caption_gasmeter">Gas Meter</string>
  <string name="channel_caption_watermeter">Water Meter</string>
  <string name="channel_caption_thermostat">Thermostat</string>
  <string name="channel_caption_thermostat_hp_homeplus">Home+ Heater</string>
  <string name="channel_btn_open">Open</string>
  <string name="channel_btn_openclose">Open Close</string>
  <string name="channel_btn_on">On</string>
  <string name="channel_btn_off">Off</string>
  <string name="event_openedthegateway">opened the gateway</string>
  <string name="event_openedclosedthegate">opened / closed the gate</string>
  <string name="event_openedclosedthegatedoors">opened / closed the gate doors</string>
  <string name="event_openedthedoor">opened the door</string>
  <string name="event_openedcloserollershutter">opened / closed roller shutter</string>
  <string name="event_poweronoff">turned the power ON/OFF</string>
  <string name="event_turnedthelightonoff">turned the light ON/OFF</string>
  <string name="server_address">SERVER ADDRESS</string>
  <string name="access_id">ACCESS IDENTIFIER</string>
  <string name="password">PASSWORD</string>
  <string name="email">E-MAIL ADDRESS</string>
  <string name="advanced_settings">Advanced</string>
  <string name="create_account">Create</string>
  <string name="delete_account">Delete</string>
  <string name="cfg_profile_active_indicator">active</string>
  <string name="cfg_label_email_auth">Email</string>
  <string name="cfg_label_access_id_auth">Access ID</string>
  <string name="cfg_checkbox_server_auto">Auto</string>
  <string name="cfg_channel_height">Channel height</string>
  <string name="cfg_temperature_unit">Temperature unit</string>
  <string name="cfg_button_autohide">Auto-hide buttons</string>
  <string name="profile">Your account</string>
  <string name="profile_plural">Your accounts</string>
  <string name="menubar_appsettings">App Settings</string>
  <string name="turn_on">Turn on</string>
  <string name="cfg_op_range">Operating range</string>
  <string name="information">Information</string>
  <string name="vl_dimmer_cfg_info_txt1">Dimming Mode / Operating Range</string>
  <string name="vl_dimmer_cfg_info_txt2">Fine tune the performance of your LED lights by selecting a different dimming mode or change the operating range by moving the dark grey sliders around the wheel to adjust the minimum and maximum brightness levels.</string>
  <string name="vl_dimmer_cfg_info_txt3">Mode 1: V-Pro Trailing-Edge Dimming</string>
  <string name="vl_dimmer_cfg_info_txt4">Mode 2: Leading-Edge Dimming</string>
  <string name="vl_dimmer_cfg_info_txt5">Mode 3: Alternative Trailing-Edge Dimming</string>
  <string name="vl_dimmer_cfg_info_txt6">Boost</string>
  <string name="vl_dimmer_cfg_info_txt7">This feature helps LED lamps switch on at low brightness settings by providing an initial boost. Move the dark grey slider around the wheel to increase the boost level at switch-on, indicated by the green line. After the boost the brightness will return to the previously set level.</string>
  <string name="vl_dimmer_cfg_info_txt8">More information on can be found at</string>
  <string name="vl_dimmer_cfg_info_txt9" translatable="false">https://www.varilight.co.uk/vps001</string>
  <string name="status_led">Status LED</string>
  <string name="info_led_on">The LED is on if there is a connection to the server.</string>
  <string name="info_led_off">The LED is off if there is a connection to the server.</string>
  <string name="info_led_alwaysoff">The LED is always off, unless the device is in Wi-Fi configuration mode (AP Mode).</string>
  <string name="diw_cfg_info_oprange">Change the operating range by moving the dark grey sliders around the wheel to adjust the minimum and maximum brightness levels.</string>
  <string name="diw_cfg_info_in_options">Input options</string>
  <string name="diw_cfg_info_mono_option">This option changes the behavior of the input to which the monostable button is connected. In case the option is disabled, the dimmer stops brightening the light when the full brightness level is reached and in case of dimming, at the lowest brightness level. Enabling this option will switch to the minimum level as soon as the maximum brightness is reached, and in the case of dimming to the maximum value, as soon as the minimum is reached. Brightening / dimming will continue as long as the button is pressed.</string>
  <string name="diw_cfg_info_bi_option">The option changes the behavior of the dimmer when the lighting is turned on by using the bistable button. If the option is enabled, the dimmer will set the full brightness level right after turning on the lighting. If the option is disabled, the dimmer will set the brightness level saved before turning off the lighting.</string>
  <string name="location_ordering">Location order</string>
  <string name="remove_account_title">Delete account?</string>
  <string name="remove_account_locally">Forget on this device</string>
  <string name="remove_account_remotely">Forget and remove on cloud</string>
  <string name="cancel">Cancel</string>
  <string name="notification_info_title">Get notified!</string>
  <string name="notification_info_message">Turn on notifications if you want to be notified!\n\nYou can setup your notifications in Supla Cloud.</string>
  <string name="skip">Skip</string>
  <string name="details_general">General</string>
  <string name="details_schedule">Week</string>
  <string name="details_timer">Timer</string>
  <string name="details_settings">Settings</string>
  <string name="details_history">History</string>
  <string name="toolbar_delete_all">Delete all</string>
  <string name="toolbar_delete_older_than_month">Delete older than 30 days</string>
  <string name="toolbar_delete_chart_history">Delete history and download again</string>
  <string name="toolbar_ocr" translatable="false">OCR</string>
  <string name="cfg_lock_screen">Lock screen</string>
  <string name="cfg_lock_screen_app">App</string>
  <string name="cfg_lock_screen_accounts">Accounts</string>
  <string name="cfg_lock_screen_none">None</string>
</resources>