<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/toolbar_accounts"
    android:icon="@drawable/ic_account"
    android:title="@string/edit_account"
    android:visible="false"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/toolbar_delete"
    android:icon="@drawable/ic_delete"
    android:title="@string/toolbar_delete_all"
    android:visible="false"
    app:showAsAction="never" />
  <item
    android:id="@+id/toolbar_delete_older_than_month"
    android:icon="@drawable/ic_delete"
    android:title="@string/toolbar_delete_older_than_month"
    android:visible="false"
    app:showAsAction="never" />
  <item
    android:id="@+id/toolbar_delete_chart_history"
    android:icon="@drawable/ic_delete"
    android:title="@string/toolbar_delete_chart_history"
    android:visible="false"
    app:showAsAction="never" />
  <item
    android:id="@+id/toolbar_ocr"
    android:icon="@drawable/ic_ocr_photo"
    android:title="@string/toolbar_ocr"
    android:visible="false"
    app:showAsAction="always" />
</menu>