<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="16dp">

  <TextView
    android:id="@+id/remove_account_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/remove_account_title"
    android:textAppearance="@style/AppTheme.TextAppearance.Headline6"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/remove_account_locally_button"
    style="@style/AppTheme.Button.Text"
    android:layout_marginTop="24dp"
    android:gravity="end|center_vertical"
    android:text="@string/remove_account_locally"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/remove_account_title" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/remove_account_remotely_button"
    style="@style/AppTheme.Button.Text"
    android:gravity="end|center_vertical"
    android:text="@string/remove_account_remotely"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/remove_account_locally_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/remove_account_cancel_button"
    style="@style/AppTheme.Button.Text"
    android:gravity="end|center_vertical"
    android:text="@string/cancel"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/remove_account_remotely_button" />


</androidx.constraintlayout.widget.ConstraintLayout>