<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="16dp">

  <androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/notification_info_icon"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:layout_marginTop="16dp"
    android:src="@drawable/notification_info"
    android:scaleType="fitCenter"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/notification_info_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/notification_info_title"
    android:textAppearance="@style/AppTheme.TextAppearance.Headline6"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/notification_info_icon" />

  <TextView
    android:id="@+id/notification_info_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/notification_info_message"
    android:textAppearance="@style/AppTheme.TextAppearance.Body2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/notification_info_title" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/notification_info_ok"
    style="@style/AppTheme.Button.Contained"
    android:layout_marginTop="24dp"
    android:gravity="center"
    android:text="@string/turn_on"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/notification_info_message" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/notification_info_skip"
    style="@style/AppTheme.Button.Outlined"
    android:gravity="end|center_vertical"
    android:layout_marginTop="24dp"
    android:text="@string/skip"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/notification_info_message" />

</androidx.constraintlayout.widget.ConstraintLayout>