<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/tvInfoTitle"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:gravity="center_vertical"
      android:text="@string/information"
      android:textColor="@color/on_background"
      android:textSize="30sp"
      android:fontFamily="@font/quicksand_regular" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnClose"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_gravity="center_vertical"
      android:layout_weight="0"
      android:background="@drawable/infoclose" />

  </LinearLayout>

  <View
    android:id="@+id/view8"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/vl_infoline" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/tvInfoTxt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cfg_op_range"
        android:textColor="@color/on_background"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans_bold" />

      <TextView
        android:id="@+id/tvInfoTxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diw_cfg_info_oprange"
        android:textColor="@color/vl_infotext"
        android:fontFamily="@font/open_sans_regular" />

      <TextView
        android:id="@+id/tvInfoTxt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/diw_cfg_info_in_options"
        android:textColor="@color/on_background"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans_regular" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/imageView1"
          android:layout_width="20dp"
          android:layout_height="35dp"
          android:layout_marginRight="10dp"
          android:layout_weight="0"
          app:srcCompat="@drawable/infinity"
          app:tint="@color/on_background" />

        <TextView
          android:id="@+id/tvInfoTxt4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:gravity="center_vertical"
          android:text="@string/diw_cfg_info_mono_option"
          android:textColor="@color/vl_infotext"
          android:textSize="12sp"
          android:fontFamily="@font/open_sans_regular" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/imageView2"
          android:layout_width="20dp"
          android:layout_height="35dp"
          android:layout_marginRight="10dp"
          android:layout_weight="0"
          app:srcCompat="@drawable/p100"
          app:tint="@color/on_background" />

        <TextView
          android:id="@+id/tvInfoTxt5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="0"
          android:gravity="center_vertical"
          android:text="@string/diw_cfg_info_bi_option"
          android:textColor="@color/vl_infotext"
          android:textSize="12sp"
          android:fontFamily="@font/open_sans_regular" />

      </LinearLayout>

      <TextView
        android:id="@+id/tvInfoTxt6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/status_led"
        android:textColor="@color/on_background"
        android:textStyle="bold"
        android:fontFamily="@font/open_sans_bold" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/imageView3"
          android:layout_width="20dp"
          android:layout_height="35dp"
          android:layout_marginRight="10dp"
          android:layout_weight="0"
          app:srcCompat="@drawable/ledon"
          app:tint="@color/on_background" />

        <TextView
          android:id="@+id/tvInfoTxt7"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="0"
          android:gravity="center_vertical"
          android:text="@string/info_led_on"
          android:textColor="@color/vl_infotext"
          android:textSize="12sp"
          android:fontFamily="@font/open_sans_regular" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/imageView4"
          android:layout_width="20dp"
          android:layout_height="35dp"
          android:layout_marginRight="10dp"
          android:layout_weight="0"
          app:srcCompat="@drawable/ledoff"
          app:tint="@color/on_background" />

        <TextView
          android:id="@+id/tvInfoTxt8"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="0"
          android:gravity="center_vertical"
          android:text="@string/info_led_off"
          android:textColor="@color/vl_infotext"
          android:textSize="12sp"
          android:fontFamily="@font/open_sans_regular" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="@dimen/distance_default"
        android:layout_weight="0"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/imageView5"
          android:layout_width="20dp"
          android:layout_height="35dp"
          android:layout_marginRight="10dp"
          android:layout_weight="0"
          app:srcCompat="@drawable/ledalwaysoff"
          app:tint="@color/on_background" />

        <TextView
          android:id="@+id/tvInfoTxt9"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="0"
          android:gravity="center_vertical"
          android:text="@string/info_led_alwaysoff"
          android:textColor="@color/vl_infotext"
          android:textSize="12sp"
          android:fontFamily="@font/open_sans_regular" />

      </LinearLayout>

    </LinearLayout>
  </ScrollView>

</LinearLayout>
